# fast-rs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  minimal.toml  tmux.conf  zellij.kdl
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-04-30-fastrs-cli-design.md  2026-04-30-fastrs-cli.md  2026-05-01-tui-mode-design.md  2026-05-01-tui-mode.md
scripts/: dev-shell.sh  setup-dev.sh
src/: api.rs  cli.rs  lib.rs  main.rs  output.rs  tui.rs
src/measure/: download.rs  latency.rs  mod.rs  speed.rs  upload.rs
tests/: end_to_end.rs
webapp/: server.py
