[package]
name = "fastrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "fastrs"
path = "src/lib.rs"

[[bin]]
name = "fastrs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"
futures = "0.3"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "test-util"] }
